Fixed it being zoomed in on mobile devices.

--- a/css/custom.css
+++ b/css/custom.css
@@ -334,6 +334,14 @@ textarea.form-control {
 	color: #fff;
 }
 
+.container > .navbar-header,
+.container-fluid > .navbar-header,
+.container > .navbar-collapse,
+.container-fluid > .navbar-collapse {
+    margin-right: 0;
+    margin-left: 0;
+}
+
 /* Content */
 .page-header {
 	border-bottom: none;
